fixed nav bar to be responsive on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -305,7 +305,7 @@
 .first-section .text-content {
   padding: 60px 0 60px 0;
   text-align: center;
-  color: #ffdc00;
+  color: #ffffff;
 }
 
 .first-section .text-content h2 {
@@ -712,3 +712,52 @@ footer a:hover {
 .col-xs-offset-0 {
   margin-left: 0;
 }
+
+.topnav {
+  overflow: hidden;
+  background-color: #002d72;
+}
+
+.topnav a {
+  float: right;
+  display: block;
+  color: #fff;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ffdc00;
+  color: black;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a{display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: center;
+  }
+
+}
+
+
